--- a/index.html
+++ b/index.html
@@ -23,15 +23,12 @@
       <input type="text" name="item" placeholder="Item Name" required>
       <input type="submit" value="+ Add Item">
     </form>
+    <button type="button" name="clearAll">Clear All</button>
+    <button type="button" name="checkAll">Check All</button>
+    <button type="button" name="uncheckAll">Uncheck All</button>
   </div>
 
-<script>
-  const addItems = document.querySelector('.add-items');
-  const itemsList = document.querySelector('.plates');
-  const items = [];
-
-</script>
-
+  <script src="index.js" charset="utf-8"></script>
 
 </body>
 </html>
