Add README + Favicon + 3 extra buttons with modified styles + screenshot

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Local Storage & Event Delegation</title>
+  <link rel="icon" href="favicon-ab.ico">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
